# accounts-manager

./: .gitignore  README.md  constants.py  db_name.py  main.py  pyproject.toml  requirements.txt  run_tasks.py  tasks.py
.github/workflows/: ci-cd.yml
src/: account.py  accounts_manager.py
test/: test.py
tests/: __init__.py  test_Account.py  test_account.py  test_accounts_manager.py
ui/: accounts_manager.ui
